--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version> <!-- Ensure you are using a recent version of the plugin -->
+            <configuration>
+                <source>1.7</source> <!-- Or 1.8, 11, 17, depending on your setup -->
+                <target>1.7</target> <!-- Or 1.8, 11, 17, depending on your setup -->
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
